# ofi-device-mapper

./: .gitignore  Makefile.am  README.md  configure.ac
include/: mochi-plumber.h
maint/: mochi-plumber.pc.in
maint/hooks/: pre-commit
src/: Makefile.subdir  mochi-plumber-query.c  mochi-plumber.c  ofi-dm-query.c
